@@ -34,6 +34,7 @@ import java.util.Base64;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -80,14 +81,16 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     private static final byte[] ROOT_URI_BYTES = "/".getBytes(StandardCharsets.ISO_8859_1);
     private static final byte[] HTTP_VERSION_BYTES = " HTTP/1.1\r\n".getBytes(StandardCharsets.ISO_8859_1);
 
+    private static final HandshakeResponse EMPTY_HANDSHAKE_RESPONSE = new WsHandshakeResponse();
+
     private volatile AsynchronousChannelGroup asynchronousChannelGroup = null;
     private final Object asynchronousChannelGroupLock = new Object();
 
     private final Log log = LogFactory.getLog(WsWebSocketContainer.class); // must not be static
     // Server side uses the endpoint path as the key
     // Client side uses the client endpoint instance
-    private final Map<Object, Set<WsSession>> endpointSessionMap = new HashMap<>();
-    private final Map<WsSession, WsSession> sessions = new ConcurrentHashMap<>();
+    private final Map<Object,Set<WsSession>> endpointSessionMap = new HashMap<>();
+    private final Map<WsSession,WsSession> sessions = new ConcurrentHashMap<>();
     private final Object endPointSessionMapLock = new Object();
 
     private long defaultAsyncTimeout = -1;
@@ -150,11 +153,8 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         if (configurator != null) {
             builder.configurator(configurator);
         }
-        ClientEndpointConfig config = builder.decoders(Arrays.asList(annotation.decoders()))
-                .encoders(Arrays.asList(annotation.encoders()))
+        return builder.decoders(Arrays.asList(annotation.decoders())).encoders(Arrays.asList(annotation.encoders()))
                 .preferredSubprotocols(Arrays.asList(annotation.subprotocols())).build();
-
-        return config;
     }
 
 
@@ -213,8 +213,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         for (Proxy proxy : proxies) {
             if (proxy.type().equals(Proxy.Type.HTTP)) {
                 sa = proxy.address();
-                if (sa instanceof InetSocketAddress) {
-                    InetSocketAddress inet = (InetSocketAddress) sa;
+                if (sa instanceof InetSocketAddress inet) {
                     if (inet.isUnresolved()) {
                         sa = new InetSocketAddress(inet.getHostName(), inet.getPort());
                     }
@@ -235,7 +234,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             }
         }
 
-        Map<String, Object> userProperties = clientEndpointConfiguration.getUserProperties();
+        Map<String,Object> userProperties = clientEndpointConfiguration.getUserProperties();
 
         // If sa is null, no proxy is configured so need to create sa
         if (sa == null) {
@@ -246,7 +245,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         }
 
         // Create the initial HTTP request to open the WebSocket connection
-        Map<String, List<String>> reqHeaders = createRequestHeaders(host, port, secure, clientEndpointConfiguration);
+        Map<String,List<String>> reqHeaders = createRequestHeaders(host, port, secure, clientEndpointConfiguration);
         clientEndpointConfiguration.getConfigurator().beforeRequest(reqHeaders);
         if (Constants.DEFAULT_ORIGIN_HEADER_VALUE != null && !reqHeaders.containsKey(Constants.ORIGIN_HEADER_NAME)) {
             List<String> originValues = new ArrayList<>(1);
@@ -278,6 +277,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         Transformation transformation = null;
         AsyncChannelWrapper channel = null;
 
+        HandshakeResponse handshakeResponse = EMPTY_HANDSHAKE_RESPONSE;
         try {
             // Open the connection
             Future<Void> fConnect = socketChannel.connect(sa);
@@ -291,9 +291,9 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
                 if (httpResponse.status == Constants.PROXY_AUTHENTICATION_REQUIRED) {
                     return processAuthenticationChallenge(clientEndpointHolder, clientEndpointConfiguration, path,
                             redirectSet, userProperties, request, httpResponse, AuthenticationType.PROXY);
-                } else if (httpResponse.getStatus() != 200) {
+                } else if (httpResponse.status() != 200) {
                     throw new DeploymentException(sm.getString("wsWebSocketContainer.proxyConnectFail", selectedProxy,
-                            Integer.toString(httpResponse.getStatus())));
+                            Integer.toString(httpResponse.status())));
                 }
             }
 
@@ -337,16 +337,16 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
             if (httpResponse.status != 101) {
                 if (isRedirectStatus(httpResponse.status)) {
-                    List<String> locationHeader = httpResponse.getHandshakeResponse().getHeaders()
-                            .get(Constants.LOCATION_HEADER_NAME);
+                    List<String> locationHeader =
+                            httpResponse.handshakeResponse().getHeaders().get(Constants.LOCATION_HEADER_NAME);
 
-                    if (locationHeader == null || locationHeader.isEmpty() || locationHeader.get(0) == null ||
-                            locationHeader.get(0).isEmpty()) {
+                    if (locationHeader == null || locationHeader.isEmpty() || locationHeader.getFirst() == null ||
+                            locationHeader.getFirst().isEmpty()) {
                         throw new DeploymentException(sm.getString("wsWebSocketContainer.missingLocationHeader",
                                 Integer.toString(httpResponse.status)));
                     }
 
-                    URI redirectLocation = URI.create(locationHeader.get(0)).normalize();
+                    URI redirectLocation = URI.create(locationHeader.getFirst()).normalize();
 
                     if (!redirectLocation.isAbsolute()) {
                         redirectLocation = path.resolve(redirectLocation);
@@ -378,15 +378,14 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
                             sm.getString("wsWebSocketContainer.invalidStatus", Integer.toString(httpResponse.status)));
                 }
             }
-            HandshakeResponse handshakeResponse = httpResponse.getHandshakeResponse();
-            clientEndpointConfiguration.getConfigurator().afterResponse(handshakeResponse);
+            handshakeResponse = httpResponse.handshakeResponse();
 
             // Sub-protocol
             List<String> protocolHeaders = handshakeResponse.getHeaders().get(Constants.WS_PROTOCOL_HEADER_NAME);
-            if (protocolHeaders == null || protocolHeaders.size() == 0) {
+            if (protocolHeaders == null || protocolHeaders.isEmpty()) {
                 subProtocol = null;
             } else if (protocolHeaders.size() == 1) {
-                subProtocol = protocolHeaders.get(0);
+                subProtocol = protocolHeaders.getFirst();
             } else {
                 throw new DeploymentException(sm.getString("wsWebSocketContainer.invalidSubProtocol"));
             }
@@ -418,10 +417,11 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             }
 
             success = true;
-        } catch (ExecutionException | InterruptedException | SSLException | EOFException | TimeoutException
-                | URISyntaxException | AuthenticationException e) {
+        } catch (ExecutionException | InterruptedException | SSLException | EOFException | TimeoutException |
+                URISyntaxException | AuthenticationException e) {
             throw new DeploymentException(sm.getString("wsWebSocketContainer.httpRequestFailed", path), e);
         } finally {
+            clientEndpointConfiguration.getConfigurator().afterResponse(handshakeResponse);
             if (!success) {
                 if (channel != null) {
                     channel.close();
@@ -439,7 +439,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         WsRemoteEndpointImplClient wsRemoteEndpointClient = new WsRemoteEndpointImplClient(channel);
 
         WsSession wsSession = new WsSession(clientEndpointHolder, wsRemoteEndpointClient, this, extensionsAgreed,
-                subProtocol, Collections.<String, String>emptyMap(), secure, clientEndpointConfiguration);
+                subProtocol, Collections.emptyMap(), secure, clientEndpointConfiguration);
 
         WsFrameClient wsFrameClient = new WsFrameClient(response, channel, wsSession, transformation);
         // WsFrame adds the necessary final transformations. Copy the
@@ -465,7 +465,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
     private Session processAuthenticationChallenge(ClientEndpointHolder clientEndpointHolder,
             ClientEndpointConfig clientEndpointConfiguration, URI path, Set<URI> redirectSet,
-            Map<String, Object> userProperties, ByteBuffer request, HttpResponse httpResponse,
+            Map<String,Object> userProperties, ByteBuffer request, HttpResponse httpResponse,
             AuthenticationType authenticationType) throws DeploymentException, AuthenticationException {
 
         if (userProperties.get(authenticationType.getAuthorizationHeaderName()) != null) {
@@ -473,16 +473,16 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
                     Integer.valueOf(httpResponse.status), authenticationType.getAuthorizationHeaderName()));
         }
 
-        List<String> authenticateHeaders = httpResponse.getHandshakeResponse().getHeaders()
-                .get(authenticationType.getAuthenticateHeaderName());
+        List<String> authenticateHeaders =
+                httpResponse.handshakeResponse().getHeaders().get(authenticationType.getAuthenticateHeaderName());
 
-        if (authenticateHeaders == null || authenticateHeaders.isEmpty() || authenticateHeaders.get(0) == null ||
-                authenticateHeaders.get(0).isEmpty()) {
+        if (authenticateHeaders == null || authenticateHeaders.isEmpty() || authenticateHeaders.getFirst() == null ||
+                authenticateHeaders.getFirst().isEmpty()) {
             throw new DeploymentException(sm.getString("wsWebSocketContainer.missingAuthenticateHeader",
                     Integer.toString(httpResponse.status), authenticationType.getAuthenticateHeaderName()));
         }
 
-        String authScheme = authenticateHeaders.get(0).split("\\s+", 2)[0];
+        String authScheme = authenticateHeaders.getFirst().split("\\s+", 2)[0];
 
         Authenticator auth = AuthenticatorFactory.getAuthenticator(authScheme);
 
@@ -494,7 +494,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         String requestUri = new String(request.array(), StandardCharsets.ISO_8859_1).split("\\s", 3)[1];
 
         userProperties.put(authenticationType.getAuthorizationHeaderName(),
-                auth.getAuthorization(requestUri, authenticateHeaders.get(0),
+                auth.getAuthorization(requestUri, authenticateHeaders.getFirst(),
                         (String) userProperties.get(authenticationType.getUserNameProperty()),
                         (String) userProperties.get(authenticationType.getUserPasswordProperty()),
                         (String) userProperties.get(authenticationType.getUserRealmProperty())));
@@ -572,7 +572,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             return;
         }
         synchronized (endPointSessionMapLock) {
-            if (endpointSessionMap.size() == 0) {
+            if (endpointSessionMap.isEmpty()) {
                 BackgroundProcessManager.getInstance().register(this);
             }
             endpointSessionMap.computeIfAbsent(key, k -> new HashSet<>()).add(wsSession);
@@ -587,11 +587,11 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             Set<WsSession> wsSessions = endpointSessionMap.get(key);
             if (wsSessions != null) {
                 wsSessions.remove(wsSession);
-                if (wsSessions.size() == 0) {
+                if (wsSessions.isEmpty()) {
                     endpointSessionMap.remove(key);
                 }
             }
-            if (endpointSessionMap.size() == 0) {
+            if (endpointSessionMap.isEmpty()) {
                 BackgroundProcessManager.getInstance().unregister(this);
             }
         }
@@ -615,13 +615,13 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         return result;
     }
 
-    private static Map<String, List<String>> createRequestHeaders(String host, int port, boolean secure,
+    private static Map<String,List<String>> createRequestHeaders(String host, int port, boolean secure,
             ClientEndpointConfig clientEndpointConfiguration) {
 
-        Map<String, List<String>> headers = new HashMap<>();
+        Map<String,List<String>> headers = new HashMap<>();
         List<Extension> extensions = clientEndpointConfiguration.getExtensions();
         List<String> subProtocols = clientEndpointConfiguration.getPreferredSubprotocols();
-        Map<String, Object> userProperties = clientEndpointConfiguration.getUserProperties();
+        Map<String,Object> userProperties = clientEndpointConfiguration.getUserProperties();
 
         if (userProperties.get(Constants.AUTHORIZATION_HEADER_NAME) != null) {
             List<String> authValues = new ArrayList<>(1);
@@ -661,13 +661,25 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         headers.put(Constants.WS_KEY_HEADER_NAME, wsKeyValues);
 
         // WebSocket sub-protocols
-        if (subProtocols != null && subProtocols.size() > 0) {
+        if (subProtocols != null && !subProtocols.isEmpty()) {
             headers.put(Constants.WS_PROTOCOL_HEADER_NAME, subProtocols);
         }
 
         // WebSocket extensions
-        if (extensions != null && extensions.size() > 0) {
-            headers.put(Constants.WS_EXTENSIONS_HEADER_NAME, generateExtensionHeaders(extensions));
+        if (extensions != null) {
+            // Filter the requested extensions to remove any that are not supported by the client container.
+            Set<String> installed = TransformationFactory.getInstance().getInstalledExtensionNames();
+            List<Extension> availableExtensions = new ArrayList<>(extensions);
+            Iterator<Extension> availableExtensionsIter = availableExtensions.iterator();
+            while (availableExtensionsIter.hasNext()) {
+                Extension e = availableExtensionsIter.next();
+                if (!installed.contains(e.getName())) {
+                    availableExtensionsIter.remove();
+                }
+            }
+            if (!availableExtensions.isEmpty()) {
+                headers.put(Constants.WS_EXTENSIONS_HEADER_NAME, generateExtensionHeaders(availableExtensions));
+            }
         }
 
         return headers;
@@ -683,7 +695,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
                 header.append(';');
                 header.append(param.getName());
                 String value = param.getValue();
-                if (value != null && value.length() > 0) {
+                if (value != null && !value.isEmpty()) {
                     header.append('=');
                     header.append(value);
                 }
@@ -701,7 +713,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     }
 
 
-    private static ByteBuffer createRequest(URI uri, Map<String, List<String>> reqHeaders) {
+    private static ByteBuffer createRequest(URI uri, Map<String,List<String>> reqHeaders) {
         ByteBuffer result = ByteBuffer.allocate(4 * 1024);
 
         // Request line
@@ -720,7 +732,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         result.put(HTTP_VERSION_BYTES);
 
         // Headers
-        for (Entry<String, List<String>> entry : reqHeaders.entrySet()) {
+        for (Entry<String,List<String>> entry : reqHeaders.entrySet()) {
             result = addHeader(result, entry.getKey(), entry.getValue());
         }
 
@@ -775,7 +787,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     private HttpResponse processResponse(ByteBuffer response, AsyncChannelWrapper channel, long timeout)
             throws InterruptedException, ExecutionException, DeploymentException, EOFException, TimeoutException {
 
-        Map<String, List<String>> headers = new CaseInsensitiveKeyMap<>();
+        Map<String,List<String>> headers = new CaseInsensitiveKeyMap<>();
 
         int status = 0;
         boolean readStatus = false;
@@ -841,7 +853,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     }
 
 
-    private void parseHeaders(String line, Map<String, List<String>> headers) {
+    private void parseHeaders(String line, Map<String,List<String>> headers) {
         // Treat headers as single values by default.
 
         int index = line.indexOf(':');
@@ -849,7 +861,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             log.warn(sm.getString("wsWebSocketContainer.invalidHeader", line));
             return;
         }
-        // Header names are case insensitive so always use lower case
+        // Header names are case-insensitive so always use lower case
         String headerName = line.substring(0, index).trim().toLowerCase(Locale.ENGLISH);
         // Multi-value headers are stored as a single header and the client is
         // expected to handle splitting into individual values
@@ -863,7 +875,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         // All ISO-8859-1
         StringBuilder sb = new StringBuilder();
 
-        char c = 0;
+        char c;
         while (response.hasRemaining()) {
             c = (char) response.get();
             sb.append(c);
@@ -949,7 +961,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
      */
     @Override
     public Set<Extension> getInstalledExtensions() {
-        return Collections.emptySet();
+        return TransformationFactory.getInstance().getInstalledExtensions();
     }
 
 
@@ -982,7 +994,9 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             try {
                 session.close(cr);
             } catch (IOException ioe) {
-                log.debug(sm.getString("wsWebSocketContainer.sessionCloseFail", session.getId()), ioe);
+                if (log.isDebugEnabled()) {
+                    log.debug(sm.getString("wsWebSocketContainer.sessionCloseFail", session.getId()), ioe);
+                }
             }
         }
 
@@ -1041,7 +1055,9 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
 
     /**
-     * {@inheritDoc} The default value is 10 which means session expirations are processed every 10 seconds.
+     * {@inheritDoc}
+     * <p>
+     * The default value is 10 which means session expirations are processed every 10 seconds.
      */
     @Override
     public int getProcessPeriod() {
@@ -1049,23 +1065,6 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     }
 
 
-    private static class HttpResponse {
-        private final int status;
-        private final HandshakeResponse handshakeResponse;
-
-        HttpResponse(int status, HandshakeResponse handshakeResponse) {
-            this.status = status;
-            this.handshakeResponse = handshakeResponse;
-        }
-
-
-        public int getStatus() {
-            return status;
-        }
-
-
-        public HandshakeResponse getHandshakeResponse() {
-            return handshakeResponse;
-        }
+    private record HttpResponse(int status, HandshakeResponse handshakeResponse) {
     }
 }
